--- a/PhysDataAcq_FlickerMotion/PhysDataAcq_FlickerMotion.vcxproj
+++ b/PhysDataAcq_FlickerMotion/PhysDataAcq_FlickerMotion.vcxproj
@@ -83,6 +83,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64;C:\Program Files (x86)\National Instruments\Shared\ExternalCompilerSupport\C\lib64\msvc;</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(IncludePath)</IncludePath>
+    <ReferencePath>$(VC_ReferencesPath_x64);</ReferencePath>
+    <SourcePath>$(VC_SourcePath);</SourcePath>
+    <ExecutablePath>$(VC_ExecutablePath_x64);$(WindowsSDK_ExecutablePath);$(VS_ExecutablePath);$(MSBuild_ExecutablePath);$(FxCopDir);$(PATH);</ExecutablePath>
+    <LibraryWPath>$(WindowsSDK_MetadataPath);</LibraryWPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -203,9 +208,13 @@
     <ClCompile Include="PPP+AN.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\PhysDataAcq_FlickerMotion\PhysDataAcq_FlickerMotion\NIDAQmx.h" />
     <ClInclude Include="AO.h" />
     <ClInclude Include="AOAIContDIStamp.h" />
+    <ClInclude Include="nisyscfg.h" />
+    <ClInclude Include="nisyscfg_errors.h" />
+    <ClInclude Include="nisyscfg_pxi.h" />
+    <ClInclude Include="nisyscfg_wide.h" />
+    <ClInclude Include="niSysMon.h" />
     <ClInclude Include="PPP+AN.h" />
     <ClInclude Include="NIDAQmx.h" />
     <CustomBuild Include="AOAI_TimeStamp_RTInterp.h" />
@@ -223,6 +232,13 @@
     <ClInclude Include="Interpolation2.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuReturnValues.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="NIDAQmx.lib" />
+    <Library Include="nisyscfg.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NIDAQmxErrorCheck.bas" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
