--- a/PhysDataAcq_FlickerMotion/PhysDataAcq_FlickerMotion.vcxproj
+++ b/PhysDataAcq_FlickerMotion/PhysDataAcq_FlickerMotion.vcxproj
@@ -222,11 +222,14 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <AdditionalIncludeDirectories>C:\Program Files\National Instruments\NI-DAQ\DAQmx ANSI C Dev\include;$(UEIDAQROOT)\CPP\include;D:\Program Files\National Instruments\Shared\ExternalCompilerSupport\C\include\NIDAQmx.h%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <BasicRuntimeChecks>Default</BasicRuntimeChecks>
+      <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)PhysDataAcq_FlickerMotion.exe</OutputFile>
